# Scope

./: .env.example  .env.local  .gitignore  DEPLOYMENT.md  DEVELOPMENT_SETUP.md  Dockerfile.frontend  LICENSE  README.md  check_users.py  create_admin_user.py  docker-compose.prod.yml  docker-compose.yml  jest.setup.js  next.config.js  package-lock.json  package.json  playwright.config.ts  setup-dev.ps1  setup-dev.sh  tailwind.config.ts  tsconfig.json
.next/: app-build-manifest.json  build-manifest.json  prerender-manifest.js  routes-manifest.json  trace
ai-service/: Dockerfile  main.py  requirements.txt
backend/: .env  ARCHITECTURE_REFINEMENT.md  Dockerfile  advanced_charting.py  ai_service.py  ai_trading_strategies.py  auth.py  community_forum.py  compliance_engine.py  comprehensive_indicators.py  conftest.py  content_filter.py  conversation_manager.py  cross_asset_indicators.py  crypto_bert_sentiment.py  crypto_indicators.py  crypto_quant_metrics.py  data_normalization.py  database.py  db_models.py  enhanced_market_data.py  enhanced_news_service.py  enterprise_security.py  explanation_generator.py  financial_context.py  finscope.db  forex_indicators.py  forum_service.py  futures_indicators.py  go.mod  go.sum  graph_neural_network.py  index_indicators.py  init.sql  init_db.py  institutional.py  institutional_analytics.py  langchain_integration.py  llm_service.py  logarithmic_regression_model.py  (+38 more)
rust/futures_indicators/: Cargo.toml
rust/futures_indicators/src/: lib.rs  mean_reversion.rs  momentum.rs  placeholders.rs  samuelson.rs  tech.rs  unified.rs
(+665 files in other folders)
